--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=CTN
 APP_ENV=local
 APP_KEY=base64:Ip/arfdqTE/xWpIztDdv7GYLnCJOB12VtlsrFnrWJA4=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://proviparral.herokuapp.com
 
 LOG_CHANNEL=stack
 
